# datawagon

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: dag_create_historical_disl.py  dag_dump_psql.py  dag_osm_enrichment.py  dag_update_station_id.py
airflow/dags/datawagon/etl/: create_historical_disl.py  dump_psql.py  geofabrik_download.py  osm_enrichment.py  update_station_id.py
airflow/org_data/: partial_results.csv
airflow/src/: schema.py
airflow/src/core/: config.py
airflow/src/extract/: csv.py  excel.py  osm_pbf.py
airflow/src/load/: clickhouse.py  postgres.py
airflow/src/models/: base.py  disl.py  osm.py  station.py
airflow/src/transform/: base.py  disl.py  station.py
airflow/src/transform/osm/: node.py  railway.py  railway_node.py  railway_way.py  way.py
backend/admin/: Dockerfile  requirements.txt  uwsgi.ini
backend/admin/config/: paginators.py  urls.py
backend/admin/config/components/: base.py  database.py  local.py
backend/admin/datawagon/: admin.py  apps.py  models.py  serializers.py
backend/clickhouse_initer/: requirements.txt
backend/clickhouse_initer/mapping/: node.sql.j2
backend/clickhouse_initer/src/: main.py
backend/clickhouse_initer/src/config/: base.py  nodes.py
backend/clickhouse_initer/src/transformer/: base.py
backend/geo_router/: Dockerfile  requirements.txt  start.sh
backend/geo_router/src/: main.py
backend/geo_router/src/core/: config.py
backend/geo_router/src/models/: base.py  datetime.py  geo.py  status_route.py  train.py
backend/geo_router/src/resources/: json_serializer.py
backend/pg_initer/: schema.sql
backend/producer/: Dockerfile  requirements.txt  start.sh
backend/producer/src/: main.py
backend/producer/src/containers/: status_route.py
backend/producer/src/core/: config.py
backend/producer/src/models/: status_route.py
backend/producer/src/resources/: json_serializer.py  string_serializer.py
clickhouse/: keeper.Dockerfile  node.Dockerfile
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  colors.scss  index.tsx
client/src/components/LeftBar/: LeftBar.module.scss  LeftBar.tsx
dashboard/: check.ipynb  data_resolver.ipynb
nginx/configs/: main.conf
(+33 files in other folders)
