[tool.poetry]
name = "datawood"
version = "0.1.0"
description = ""
authors = ["xh4vm <h4vm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.10.1"
pydantic = "^2.4.2"


[tool.poetry.group.build.dependencies]
black = "^23.10.1"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
