[tool.poetry]
name = "datawood"
version = "0.1.0"
description = ""
authors = ["xh4vm <h4vm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.10.1"
pydantic = "^2.4.2"
fastapi = "^0.104.1"
orjson = "^3.9.10"
backoff = "^2.2.1"
jinja2 = "^3.1.2"
clickhouse-driver = "^0.2.6"
aiohttp = "^3.8.6"
dependency-injector = "^4.41.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
aiokafka = "^0.8.1"
starlette-context = "^0.3.6"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"


[tool.poetry.group.build.dependencies]
black = "^23.10.1"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
